force-app/main/default/objects/Account/fields/DevOps_Demo__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Demo__c</fullName>
    <label>DevOps Demo New label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>