force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Industry_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Food</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Bakery Products</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Candy</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Cereal</fullName>
            </value>
            <value>
                <fullName>Cheese Dairy</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Cleaning Prod</fullName>
            </value>
            <value>
                <fullName>Coffee Tea</fullName>
            </value>
            <value>
                <fullName>Contract Pckgng</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>French Fry</fullName>
            </value>
            <value>
                <fullName>Fruits Veg</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Meat Poultry Seafood</fullName>
            </value>
            <value>
                <fullName>Minerals</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Paper Card</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Pharma Health</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>Prepared Foods</fullName>
            </value>
            <value>
                <fullName>Snack Foods</fullName>
            </value>
            <value>
                <fullName>Sugar</fullName>
            </value>
            <value>
                <fullName>Tortillas etc.</fullName>
            </value>
            <value>
                <fullName>Warehouse Dist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>