force-app/main/default/objects/Account/fields/Preferred_Service_Technician__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Service_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Service Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>