force-app/main/default/objects/Account/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Heat and Control&apos;s Sales Contact for this Account</inlineHelpText>
    <label>Sales Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Sales Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>